# scientific-method-framework

./: .coverage  .dockerignore  .gitignore  DECISIONS.md  Dockerfile  ENGINEERING.md  Makefile  PORTFOLIO_ANALYSIS.md  README.md  docker-compose.dev.yml  docker-compose.yml  mkdocs.yml  pixi.toml  pyproject.toml  requirements.txt  vsa.py  vsa_2f5aaead_provenance.db  vsa_9a100cdc_provenance.db  vsa_da025a1d_provenance.db  vsa_edc19970_provenance.db  vsa_f9c006ca_provenance.db
.github/workflows/: ci.yml
api/: __init__.py  main.py  requirements.txt
benchmarks/: PORTFOLIO_ANALYSIS.md
core/: agent.py  ecosystem.py  foundations.py  hermeneutics.py  negative_space.py  quantum.py  scientific_agent.py  visualization.py
core/vsa/: agent.py
core/vsa/ledger/: __init__.py  merkle.py
core/vsa/logic/: engine.py
core/vsa/provenance/: ledger.py  supply_chain.py
core/vsa/reporting/: citation.py  publisher.py
core/vsa/resilience/: red_team.py
core/vsa/telemetry/: observer.py
docs/: API_SCHEMAS.md  ARCHITECTURE.md  INTEGRATION.md  NEGATIVE_SPACE.md  VSA_ENGINES.md  WORKFLOW.md
examples/: demo.py  gcp_validation_demo.py  portfolio_demo.py  simple_example.py
manifesto/: DECISIONS.md
reports/: report_20260213_083046.md  report_20260213_084955.md  report_20260213_174025.md  report_20260213_174414.md
src/: __init__.py  agent.py  ecosystem.py  foundations.py  scientific_agent.py  visualization.py
src/scientific_method/: __init__.py  credibility.py  main.py  research.py  research_test.py
src/scientific_method/core/: hermeneutics.py
src/vsa/: __init__.py  agent.py
src/vsa/logic/: __init__.py  engine.py
src/vsa/provenance/: __init__.py  ledger.py  supply_chain.py
src/vsa/reporting/: __init__.py  citation.py  publisher.py
src/vsa/resilience/: __init__.py  red_team.py
src/vsa/telemetry/: __init__.py  observer.py
tests/: __init__.py  test_experiment.py  test_hypothesis.py  test_integration.py  test_knowledge_base.py  test_validation.py
tests/integration/: __init__.py  test_api.py  test_full_workflow.py
