[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scientific-method-framework"
version = "1.0.0"
description = "Verifiable Scientific Agent (VSA) Framework for automated scientific discovery"
readme = "README.md"
authors = [{name = "WADELABS", email = "234048860+WADELABS@users.noreply.github.com"}]
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.20.0",
    "networkx>=2.6.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "dataclasses-json>=0.5.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.109.1",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "flake8>=6.0.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocs-minify-plugin>=0.7.0",
]
all = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "flake8>=6.0.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocs-minify-plugin>=0.7.0",
]

[project.urls]
Homepage = "https://github.com/WADELABS/scientific-method-framework"
Documentation = "https://github.com/WADELABS/scientific-method-framework/tree/main/docs"
Repository = "https://github.com/WADELABS/scientific-method-framework"
Issues = "https://github.com/WADELABS/scientific-method-framework/issues"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests",
    "docker: marks tests as docker tests",
    "slow: marks tests as slow",
]

[tool.coverage.run]
source = ["core", "src", "api"]
omit = ["tests/*", "examples/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.flake8]
max-line-length = 120
exclude = [".git", "__pycache__", "build", "dist", ".eggs"]
ignore = ["E501", "W503"]
